--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/node": "^14.14.6",
     "chokidar": "^3.4.3",
     "cross-env": "^7.0.2",
     "electron": "^10.1.5",
@@ -37,6 +38,7 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-externals": "^2.2.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.8",
