Fix rollup bundling

--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "dev:svelte": "rollup -c -w",
     "dev:electron": "cross-env NODE_ENV=development electron .",
     "dev": "run-p dev:*",
-    "build:svelte": "rollup -c",
-    "build:electron": "electron .",
-    "build": "run-s build:svelte build:electron",
-    "start:svelte": "sirv public",
-    "start:svelte:dev": "sirv public --dev",
+    "build": "rollup -c",
+    "start:electron": "electron .",
+    "start": "run-s build start:electron",
     "pack:electron": "electron-builder --dir",
     "pack": "run-s build pack:electron",
     "dist:electron": "electron-builder",
