--- a/package.json
+++ b/package.json
@@ -24,30 +24,31 @@
     "portable-dist": "run-s build portable-dist:electron"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "@types/node": "^14.14.6",
-    "chokidar": "^3.4.3",
-    "cross-env": "^7.0.2",
-    "electron": "^10.1.5",
-    "electron-builder": "^22.9.1",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@tsconfig/svelte": "^2.0.1",
+    "@types/node": "^15.14.0",
+    "chokidar": "^3.5.2",
+    "cross-env": "^7.0.3",
+    "electron": "^13.1.4",
+    "electron-builder": "^22.11.7",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^2.0.0",
+    "rollup": "^2.52.6",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-node-externals": "^2.2.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sirv-cli": "^1.0.8",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^1.0.12",
+    "svelte": "^3.38.3",
+    "svelte-check": "^2.2.0",
+    "svelte-preprocess": "^4.7.3",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "svelte-feather-icons": "^3.3.0",
-    "svelte-toggle": "^1.1.0"
+    "svelte-feather-icons": "^3.5.0",
+    "svelte-toggle": "^3.0.0"
   }
 }
