--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "electron": "^13.1.4",
     "electron-builder": "^22.11.7",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.3.2",
+    "prettier-plugin-svelte": "2.3.1",
     "rollup": "^2.52.6",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
